--- a/css/framworks.css
+++ b/css/framworks.css
@@ -56,6 +56,14 @@
     width: fit-content;
 }
 
+.w-100 {
+    width: 100px;
+}
+
+.h-100 {
+    height: 100px;
+}
+
 .h-full {
     height: 100%;
 }
@@ -64,9 +72,7 @@
     display: block;
 }
 
-
 /*End box*/
-
 
 /*Start padding And Margin */
 .p-10 {
@@ -109,13 +115,22 @@
     padding-left: 15px;
 }
 
-.m-20 {
-    margin: 20px;
+.m-auto {
+    margin: auto;
 }
 
 .m-0 {
     margin: 0;
 }
+
+.m-15 {
+    margin: 15px;
+}
+
+.m-20 {
+    margin: 20px;
+}
+
 
 .mt-0 {
     margin-top: 0;
@@ -141,6 +156,9 @@
     margin-top: 25px;
 }
 
+.mr-5 {
+    margin-right: 5px;
+}
 .mr-10 {
     margin-right: 10px;
 }
@@ -173,7 +191,6 @@
     padding: 5px 10px;
     border-radius: 6px;
 }
-
 
 /*End padding And Margin */
 
@@ -259,9 +276,7 @@
 
 /*ُEnd Font*/
 
-
 /*Start border*/
-
 
 .b-none {
     border: none;
